Add Login Function full + start ver of registration